--- a/work/09_自定义Promise_使用测试.html
+++ b/work/09_自定义Promise_使用测试.html
@@ -8,17 +8,15 @@
 
 <body>
   <script src="./lib/Promise.js"></script>
-  <script>
+ <!-- 
+ <script>
     const p = new Promise((resolve, reject) => {
       // throw new Error('---')
-      
-      setTimeout(() => {
-        if (Date.now()%2===0) {
-          resolve('成功的数据')
-        } else {
-          reject('失败的数据')
-        }
-      }, 1000);
+      if (Date.now()%2===0) {
+        resolve('成功的数据')
+      } else {
+        reject('失败的数据')
+      }
     })
     console.log(p)
     p.then(
@@ -38,6 +36,34 @@
       }
     )
   </script>
+ -->
 
+ <script>
+    new Promise((resolve, reject) => { // 在Promise内部会同步执行executor函数
+      resolve(1)
+      // reject(2)
+    }).then(
+      value => {
+        console.log('onResolved()', value)
+        // return undefined
+        // return 3
+        // throw 4
+        return new Promise((resolve, reject) => {
+          resolve(5)
+          // reject(6)
+        })
+      },
+      reason => {
+        console.log('onRejected()', reason)
+      },
+    ).then(
+      value => {
+        console.log('onResolved()2', value)
+      },
+      reason => {
+        console.log('onRejected()2', reason)
+      }
+    )
+ </script>
 </body>
 </html>
