--- a/work/08_Promise_使用测试.html
+++ b/work/08_Promise_使用测试.html
@@ -61,18 +61,27 @@
 -->
 
 <script>
-  const p1 = Promise.resolve(3)
-  const p2 = Promise.resolve(Promise.reject(5))
+  const p1 = new Promise((resolve, reject) => {
+    setTimeout(() => {
+      resolve(4)
+    }, 100);
+  })
+  const p2 = Promise.resolve(Promise.resolve(5))
   const p3 = Promise.reject(6)
 
-  /* Promise.all([p1, 'abc', p3, p2]).then(
-    values => {
-      console.log('onResolved()', values)
+  Promise.all([p1, p2, 3, p3]).then(values => {
+    console.log(values)
+  }, reason => {
+    console.log(reason)
+  })
+  Promise.race([p1, p3]).then(
+    value => {
+      console.log('成功', value)
     },
     reason => {
-      console.log('onRejected()', reason)
-    }
-  ) */
+      console.log('失败', reason)
+    },
+  )
 </script>
 
 
